<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Exercise4.NextActivity">

    <!-- Выбор температуры -->
    <RadioGroup
        android:id="@+id/radioGroupTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/checkMilk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <RadioButton
            android:id="@+id/radioHot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/hot"
            android:text="@string/Hot" />

        <RadioButton
            android:id="@+id/radioCold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/cold"
            android:text="@string/Cold" />
    </RadioGroup>

    <!-- Выбор добавок -->
    <CheckBox
        android:id="@+id/checkMilk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Milk"
        app:layout_constraintBottom_toTopOf="@+id/checkCream"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupTemperature"
        app:layout_constraintVertical_bias="0.5" />

    <CheckBox
        android:id="@+id/checkCream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Slivki"
        app:layout_constraintBottom_toTopOf="@+id/checkSugar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkMilk"
        app:layout_constraintVertical_bias="0.5" />

    <CheckBox
        android:id="@+id/checkSugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SUGAr"
        app:layout_constraintBottom_toTopOf="@+id/checkSyrup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkCream"
        app:layout_constraintVertical_bias="0.5" />

    <CheckBox
        android:id="@+id/checkSyrup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/Sirop"
        app:layout_constraintBottom_toTopOf="@+id/spinnerDelivery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkSugar"
        app:layout_constraintVertical_bias="0.5" />

    <!-- Выбор способа доставки -->
    <Spinner
        android:id="@+id/spinnerDelivery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/delivery_options"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkSyrup"
        app:layout_constraintVertical_bias="0.5" />

    <!-- Кнопка для подтверждения заказа -->
    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:drawableEnd="@drawable/delivery_icon"
        android:drawablePadding="8dp"
        android:text="@string/Dostavit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerDelivery"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>
