<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Exercise2.MainActivity">

    <!-- Изображение с масштабированием по центру -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/cat_discription"
        android:scaleType="centerCrop"
        android:src="@drawable/cat" />

    <!-- Контейнер для текстовых полей -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Первая текстовая надпись с id для обработки клика -->
        <TextView
            android:id="@+id/cat_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.6"
            android:background="@android:color/black"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/this_iscat"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <!-- Вторая текстовая надпись -->
        <TextView
            android:id="@+id/cat_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.6"
            android:background="@android:color/black"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/or_kitty"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>
</FrameLayout>
